# xings-software

./: .buildconfig  .gitignore  AUTHORS  MAINTAINERS  Makefile.am  NEWS  NEWS.md  README  README.md  TODO  configure.ac
.github/: FUNDING.yml
data/: .gitignore  Makefile.am  gpk-application.ui  gpk-log.ui  gpk-prefs.ui  gpk-third-party-installer.ui  gpk-update-viewer.ui  org.freedesktop.PackageKit.service.in  org.xings.packagekit.gschema.migrate  org.xings.packagekit.gschema.xml  org.xings.software.gschema.xml  xings-install-local-package.desktop.in  xings-package-history.desktop.in  xings-package-updates.desktop.in  xings-packagekit-preferences.desktop.in  xings-packagekit-service.desktop.in  xings-packages.desktop.in  xings-preferences.desktop.in  xings-software-history.desktop.in  xings-software-preferences.desktop.in  xings-software-service.desktop.in  xings-software-update.desktop.in  xings-software.desktop.in  xings-third-parties-installer.desktop.in  xings-updates-notifier.desktop.in  xings-updates-service.desktop.in
data/appdata/: Makefile.am  xings-package-updates.appdata.xml.in  xings-packages.appdata.xml.in  xings-software-update.appdata.xml.in  xings-software.appdata.xml.in
data/categories/: Makefile.am  accesories.directory.in  development.directory.in  education.directory.in  games.directory.in  graphics.directory.in  multimedia.directory.in  network.directory.in  office.directory.in  science.directory.in  settings.directory.in
data/icons/16x16/: Makefile.am
data/icons/16x16/animations/: Makefile.am
data/icons/16x16/categories/: Makefile.am
data/icons/16x16/status/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/22x22/animations/: Makefile.am
data/icons/22x22/categories/: Makefile.am
data/icons/22x22/status/: Makefile.am
data/icons/24x24/animations/: Makefile.am
data/icons/24x24/categories/: Makefile.am
data/icons/24x24/status/: Makefile.am
data/icons/48x48/animations/: Makefile.am
data/icons/48x48/categories/: Makefile.am
data/icons/48x48/status/: Makefile.am
data/icons/scalable/categories/: Makefile.am
data/icons/scalable/status/: Makefile.am
docs/: DBusInterface.txt
man/: Makefile.am  xings-install-local-package.sgml  xings-install-package-name.sgml  xings-package-history.sgml  xings-package-updates.sgml  xings-packagekit-preferences.sgml  xings-packagekit-service.sgml  xings-packages.sgml  xings-preferences.sgml  xings-software-history.sgml  xings-software-preferences.sgml  xings-software-service.sgml  xings-software-update.sgml  xings-software.sgml
po/: POTFILES.in  af.po  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en@shaw.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kk.po  kn.po  ko.po  (+34 more)
src/: .gitignore  Makefile.am  gpk-animated-icon.c  gpk-application.c  gpk-cell-renderer-info.c  gpk-cell-renderer-restart.c  gpk-common.c  gpk-common.h  gpk-dbus-task.c  gpk-dbus-task.h  gpk-dbus.c  gpk-dbus.h  gpk-desktop.c  gpk-desktop.h  gpk-dialog.c  gpk-dialog.h  gpk-enum.c  gpk-enum.h  gpk-gnome.c  gpk-helper-chooser.c  gpk-helper-chooser.h  gpk-helper-run.c  gpk-helper-run.h  gpk-install-local-file.c  gpk-install-package-name.c  gpk-language.h  gpk-log.c  gpk-modal-dialog.c  gpk-modal-dialog.h  gpk-notifier-service.c  gpk-prefs.c  gpk-scheduler.c  gpk-scheduler.h  gpk-self-test.c  gpk-session.c  gpk-session.h  gpk-task.c  gpk-task.h  gpk-update-viewer.c  gpk-updates-applet.c  (+7 more)
src/common/: Makefile.am  gpk-common.c  gpk-common.h  gpk-desktop.c  gpk-dialog.c  gpk-enum.c  gpk-enum.h  gpk-error.c  gpk-gnome-proxy.c  gpk-gnome-proxy.h  gpk-helper-chooser.c  gpk-helper-chooser.h  gpk-helper-run.c  gpk-language.c  gpk-language.h  gpk-modal-dialog.c  gpk-modal-dialog.h  gpk-session.c  gpk-session.h  gpk-task.c  gpk-vendor.c  gpk-vendor.h  gpk-x11.c  gpk-x11.h  gpk-xfce-proxy.c  gpk-xfce-proxy.h
src/helpers/: Makefile.am  gpk-install-local-file.c  gpk-install-package-name.c
src/history/: Makefile.am  gpk-log.c
src/packagekit-service/: Makefile.am  gpk-dbus-service.c  gpk-dbus-task.c  gpk-dbus-task.h  gpk-dbus.c  gpk-dbus.h
src/preferences/: Makefile.am  gpk-prefs.c
src/software/: Makefile.am  gpk-application.c  gpk-as-store.c  gpk-as-store.h  gpk-backend.c  gpk-backend.h  gpk-categories.c  gpk-categories.h  gpk-category.c  gpk-category.h  gpk-groups-list.c  gpk-groups-list.h  gpk-package-list.c  gpk-package-list.h  gpk-package-row.c  gpk-package-row.h  gpk-packages-list.c  gpk-packages-list.h
src/software-service/: Makefile.am  gpk-updates-checker.h  gpk-updates-download.c  gpk-updates-download.h  gpk-updates-manager.c  gpk-updates-manager.h  gpk-updates-notification.c  gpk-updates-notification.h  gpk-updates-refresh.c  gpk-updates-service.c
src/software-update/: Makefile.am  gpk-cell-renderer-size.c  gpk-update-viewer.c
src/third-parties/: Makefile.am  gpk-flatpak-installer.c  gpk-flatpak-installer.h  gpk-flatpak-ref.c  gpk-flatpak-ref.h  gpk-third-parties.c
src/updates-service/: Makefile.am  gpk-updates-applet.c  gpk-updates-applet.h  gpk-updates-checker.c  gpk-updates-manager.c  gpk-updates-notification.c  gpk-updates-notification.h  gpk-updates-refresh.c  gpk-updates-refresh.h  gpk-updates-service.c  gpk-updates-shared.c  gpk-updates-shared.h
src/updates-viewer/: Makefile.am  gpk-cell-renderer-info.c  gpk-cell-renderer-restart.c  gpk-update-viewer.c
