themedir = $(pkgdatadir)/icons/hicolor
size = 24x24
context = animations

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = 				\
	xings-action-cleanup.png	\
	xings-action-removing.png	\
	xings-action-testing.png	\
	xings-action-download.png	\
	xings-action-refresh-cache.png	\
	xings-action-searching.png	\
	xings-action-installing.png	\
	xings-action-waiting.png

noinst_DATA =

EXTRA_DIST =				\
	$(icons_DATA)			\
	$(noinst_DATA)
